@startuml

title __HIGHLEVEL's Class Diagram__\n

  namespace org.factcast.highlevel {
    class org.factcast.highlevel.DefaultEventCast {
        {static} - log : Logger
        + DefaultEventCast()
        + batch()
        + fetch()
        + fetch()
        + publish()
        + publish()
        + publish()
        + publish()
        + update()
        ~ getAllFields()
        - catchupProjection()
        - initial()
        - initialProjection()
    }
  }
  

  namespace org.factcast.highlevel {
    interface org.factcast.highlevel.EventCast {
        {static} + FOREVER : Duration
        {abstract} + batch()
        {abstract} + fetch()
        {abstract} + fetch()
        {abstract} + publish()
        {abstract} + publish()
        {abstract} + publish()
        {abstract} + publish()
        + update()
        {abstract} + update()
    }
  }
  

  namespace org.factcast.highlevel {
    interface org.factcast.highlevel.EventPojo {
        + additionalFactHeaders()
        {abstract} + aggregateIds()
        + toFact()
        + toFact()
    }
  }
  

  namespace org.factcast.highlevel {
    interface org.factcast.highlevel.Handler {
    }
  }
  

  namespace org.factcast.highlevel {
    interface org.factcast.highlevel.HandlerFor {
        {abstract} + ns()
        {abstract} + type()
        {abstract} + version()
    }
  }
  

  org.factcast.highlevel.DefaultEventCast .up.|> org.factcast.highlevel.EventCast
  org.factcast.highlevel.DefaultEventCast o-- org.factcast.highlevel.snapshot.AggregateSnapshotRepository : aggregateSnapshotRepository
  org.factcast.highlevel.DefaultEventCast o-- org.factcast.highlevel.applier.EventApplierFactory : ehFactory
  org.factcast.highlevel.DefaultEventCast o-- org.factcast.core.FactCast : fc
  org.factcast.highlevel.DefaultEventCast o-- org.factcast.highlevel.snapshot.ProjectionSnapshotRepository : projectionSnapshotRepository
  org.factcast.highlevel.DefaultEventCast o-- org.factcast.highlevel.serializer.EventSerializer : serializer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
